--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="row align-items-end">
                   <div class="col">
-                    One of three columns
+                    One of 11three columns
                   </div>
                   <div class="col">
                     One of three columns
